--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,7 +42,11 @@ jobs:
         assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
         hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
         openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
-     
+   
+    - name: Install Numpy
+      shell: bash
+      run: pip3 install numpy
+   
     - name: Install Qt
       uses: jurplel/install-qt-action@v2
       with:
@@ -73,6 +77,7 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
         -DIVW_CFG_CMAKE_DEBUG=ON
         -DIVW_CFG_PRECOMPILED_HEADERS=OFF
+        -DIVW_TEST_UNIT_TESTS_RUN_ON_BUILD=OFF
         -DIVW_USE_OPENMP=OFF
         -DIVW_PACKAGE_INSTALLER=ON
         -DIVW_USE_EXTERNAL_ASSIMP=ON
