--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,22 +5,23 @@ on: [push]
 env:
   BUILD_TYPE: Release
   VCPKG_SHA: '18ab4b72a26284f0df28295ce7bf9b21c96f20f4'
-  VCPKG_DEFAULT_TRIPLET: 'x64-windows'                                          # recognized by vcpkg
-  VCPKG_BINARY_SOURCES : 'clear;nuget,GitHub,readwrite;files,${{ github.workspace }}/vcpkg-cache,readwrite'  # recognized by vcpkg
+  VCPKG_DEFAULT_TRIPLET: 'x64-windows'                   # recognized by vcpkg
+  VCPKG_BINARY_SOURCES : 'clear;nuget,GitHub,readwrite'  # recognized by vcpkg
+  # files,${{ github.workspace }}/vcpkg-cache,readwrite
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:  
-    - name: Cache Vcpkg binaries
-      uses: actions/cache@v2
-      with:
-        path: vcpkg-cache
-        key: vcpkg-bin-cache-dynamic-v1
-        restore-keys: | 
-          vcpkg-bin-cache-dynamic-v1
-          vcpkg-bin-cache-dynamic
+    #- name: Cache Vcpkg binaries
+    #  uses: actions/cache@v2
+    #  with:
+    #    path: vcpkg-cache
+    #    key: vcpkg-bin-cache-dynamic-v1
+    #    restore-keys: | 
+    #      vcpkg-bin-cache-dynamic-v1
+    #      vcpkg-bin-cache-dynamic
             
     - name: VCPKG Clone
       uses: actions/checkout@v2.3.2
@@ -30,15 +31,15 @@ jobs:
         path: vcpkg
     
     - name: VCPKG Bootstrap
-      shell: cmd
+      shell: bash
       working-directory: vcpkg
-      run: 'bootstrap-vcpkg.bat'
+      run: 'bootstrap-vcpkg.sh'
     
     - name: 'Setup NuGet Credentials'
       shell: bash
       working-directory: vcpkg
       run: >
-        `vcpkg.exe fetch nuget | tail -n 1`
+        `vcpkg fetch nuget | tail -n 1`
         sources add
         -source "https://nuget.pkg.github.com/inviwo/index.json"
         -storepasswordincleartext
@@ -47,10 +48,10 @@ jobs:
         -password "${{ secrets.GITHUB_TOKEN }}"
     
     - name: VCPKG Install
-      shell: cmd
+      shell: bash
       working-directory: vcpkg
       run: > 
-        vcpkg.exe install 
+        vcpkg install 
         assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
         hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
         openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
