--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -51,67 +51,67 @@ jobs:
       shell: bash
       working-directory: vcpkg
       run: > 
-        vcpkg --debug install
-        assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
-        hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
-        openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
+        vcpkg --debug install fmt
+     #   assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
+     #   hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
+     #   openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
    
-    - name: Install Numpy
-      shell: bash
-      run: pip3 install numpy
+    #- name: Install Numpy
+    #  shell: bash
+    #  run: pip3 install numpy
    
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v2
-      with:
-        version: 5.15.0
-        dir: ${{ github.workspace }}
+    #- name: Install Qt
+    #  uses: jurplel/install-qt-action@v2
+    #  with:
+    #    version: 5.15.0
+    #    dir: ${{ github.workspace }}
        
-    - name: Install NSIS
-      run: |
-        Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
-        scoop bucket add extras
-        scoop install nsis doxygen
+    #- name: Install NSIS
+    #  run: |
+    #    Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
+    #    scoop bucket add extras
+    #    scoop install nsis doxygen
      
-    - uses: actions/checkout@v2
-      with: 
-        path: inviwo
-        submodules: recursive
+    #- uses: actions/checkout@v2
+    #  with: 
+    #    path: inviwo
+    #    submodules: recursive
         
-    - name: Configure CMake
-      shell: cmd
-      run: >
-        cmake.exe -S inviwo -B build 
-        -DVCPKG_TARGET_TRIPLET='${{ env.VCPKG_DEFAULT_TRIPLET }}'
-        -DCMAKE_TOOLCHAIN_FILE='${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake'
-        -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
-        -DIVW_CFG_CMAKE_DEBUG=ON
-        -DIVW_CFG_PRECOMPILED_HEADERS=OFF
-        -DIVW_TEST_UNIT_TESTS_RUN_ON_BUILD=OFF
-        -DIVW_TEST_BENCHMARKS=ON
-        -DIVW_TEST_INTEGRATION_TESTS=ON
-        -DIVW_USE_OPENMP=OFF
-        -DIVW_USE_OPENEXR=OFF
-        -DIVW_MODULE_CIMG=ON
-        -DIVW_MODULE_HDF5=ON
-        -DIVW_PACKAGE_INSTALLER=ON
-        -DIVW_USE_EXTERNAL_ASSIMP=ON
-        -DIVW_USE_EXTERNAL_BENCHMARK=ON
-        -DIVW_USE_EXTERNAL_EIGEN=ON
-        -DIVW_USE_EXTERNAL_FMT=ON
-        -DIVW_USE_EXTERNAL_FREETYPE=ON
-        -DIVW_USE_EXTERNAL_GLFW=ON
-        -DIVW_USE_EXTERNAL_GLM=ON
-        -DIVW_USE_EXTERNAL_GTEST=ON
-        -DIVW_USE_EXTERNAL_HDF5=ON
-        -DIVW_USE_EXTERNAL_IMG=ON
-        -DIVW_USE_EXTERNAL_JSON=ON
-        -DIVW_USE_EXTERNAL_CIMG=ON
-        -DIVW_USE_EXTERNAL_GLEW=ON
-        -DIVW_USE_EXTERNAL_TCLAP=ON
-        -DIVW_USE_EXTERNAL_UTFCPP=ON
-        -DIVW_USE_EXTERNAL_TINYDIR=ON
-        -DIVW_USE_EXTERNAL_PYBIND11=ON
-        -DIVW_USE_EXTERNAL_OPENEXR=ON
+    #- name: Configure CMake
+    #  shell: cmd
+    #  run: >
+    #    cmake.exe -S inviwo -B build 
+    #    -DVCPKG_TARGET_TRIPLET='${{ env.VCPKG_DEFAULT_TRIPLET }}'
+    #    -DCMAKE_TOOLCHAIN_FILE='${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake'
+    #    -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+    #    -DIVW_CFG_CMAKE_DEBUG=ON
+    #    -DIVW_CFG_PRECOMPILED_HEADERS=OFF
+    #    -DIVW_TEST_UNIT_TESTS_RUN_ON_BUILD=OFF
+    #    -DIVW_TEST_BENCHMARKS=ON
+    #    -DIVW_TEST_INTEGRATION_TESTS=ON
+    #    -DIVW_USE_OPENMP=OFF
+    #    -DIVW_USE_OPENEXR=OFF
+    #    -DIVW_MODULE_CIMG=ON
+    #    -DIVW_MODULE_HDF5=ON
+    #    -DIVW_PACKAGE_INSTALLER=ON
+    #    -DIVW_USE_EXTERNAL_ASSIMP=ON
+    #    -DIVW_USE_EXTERNAL_BENCHMARK=ON
+    #    -DIVW_USE_EXTERNAL_EIGEN=ON
+    #    -DIVW_USE_EXTERNAL_FMT=ON
+    #    -DIVW_USE_EXTERNAL_FREETYPE=ON
+    #    -DIVW_USE_EXTERNAL_GLFW=ON
+    #    -DIVW_USE_EXTERNAL_GLM=ON
+    #    -DIVW_USE_EXTERNAL_GTEST=ON
+    #    -DIVW_USE_EXTERNAL_HDF5=ON
+    #    -DIVW_USE_EXTERNAL_IMG=ON
+    #    -DIVW_USE_EXTERNAL_JSON=ON
+    #    -DIVW_USE_EXTERNAL_CIMG=ON
+    #    -DIVW_USE_EXTERNAL_GLEW=ON
+    #    -DIVW_USE_EXTERNAL_TCLAP=ON
+    #    -DIVW_USE_EXTERNAL_UTFCPP=ON
+    #    -DIVW_USE_EXTERNAL_TINYDIR=ON
+    #    -DIVW_USE_EXTERNAL_PYBIND11=ON
+    #    -DIVW_USE_EXTERNAL_OPENEXR=ON
          
     #- name: Build
     #  working-directory: build
