--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -4,7 +4,8 @@ on: [push]
 
 env:
   BUILD_TYPE: Release
-  VCPKG_SHA: '2a6442cb934de2f99c8ac5bbd8a9dcf5538aee98'
+  #VCPKG_SHA: '2a6442cb934de2f99c8ac5bbd8a9dcf5538aee98'
+  VCPKG_SHA: 'b13cb242b4db8f367c678f89460be88bd2000bc6'
   VCPKG_DEFAULT_TRIPLET: 'x64-windows'                   # recognized by vcpkg
   VCPKG_BINARY_SOURCES : 'clear;nuget,GitHub,readwrite'  # recognized by vcpkg
   # files,${{ github.workspace }}/vcpkg-cache,readwrite
@@ -26,7 +27,7 @@ jobs:
     - name: VCPKG Clone
       uses: actions/checkout@v2.3.2
       with:
-        repository: 'microsoft/vcpkg'
+        repository: 'inviwo/vcpkg'
         ref: ${{ env.VCPKG_SHA }}
         path: vcpkg
     
@@ -55,12 +56,7 @@ jobs:
      #   assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
      #   hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
      #   openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
-   
-    - uses: actions/upload-artifact@v2
-      with:
-        name: nuget-pkgs
-        path: vcpkg/buildtrees/*.nupkg
-   
+      
     #- name: Install Numpy
     #  shell: bash
     #  run: pip3 install numpy
