--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -5,8 +5,8 @@ on: [push]
 env:
   BUILD_TYPE: Release
   #IVW_VCPKG_SHA: '2a6442cb934de2f99c8ac5bbd8a9dcf5538aee98'
-  IVW_VCPKG_SHA: '2724db740385a9e719030b99830ec13d7bcd84de'
-  #IVW_VCPKG_SHA: '88bfde3e361498770d060f7d18b3d6ab7887eac0' #ras0219
+  #IVW_VCPKG_SHA: '2724db740385a9e719030b99830ec13d7bcd84de'
+  IVW_VCPKG_SHA: '3d4d09b2640c2a3bcc831bd91131464f0ed77508' #ras0219
   VCPKG_DEFAULT_TRIPLET: 'x64-windows'                   # recognized by vcpkg
   VCPKG_BINARY_SOURCES : 'clear;nuget,GitHub,readwrite'  # recognized by vcpkg
   # files,${{ github.workspace }}/vcpkg-cache,readwrite
@@ -28,7 +28,7 @@ jobs:
     - name: VCPKG Clone
       uses: actions/checkout@v2.3.2
       with:
-        repository: 'inviwo/vcpkg'
+        repository: 'ras0219/vcpkg'
         ref: ${{ env.IVW_VCPKG_SHA }}
         path: vcpkg
     
