--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,7 +27,7 @@ jobs:
     
     - name: Clean vcpkg
       shell: bash
-      run: rm -rf C:\vcpkg
+      run: rm -rf C:/vcpkg
     
     - name: VCPKG Clone
       uses: actions/checkout@v2.3.2
@@ -45,7 +45,7 @@ jobs:
       shell: bash
       working-directory: vcpkg
       run: >
-        `vcpkg fetch nuget | tail -n 1`
+        `./vcpkg fetch nuget | tail -n 1`
         sources add
         -source "https://nuget.pkg.github.com/inviwo/index.json"
         -storepasswordincleartext
@@ -61,7 +61,7 @@ jobs:
       shell: bash
       working-directory: vcpkg
       run: > 
-        vcpkg --debug install fmt
+        ./vcpkg --debug install fmt
      #   assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
      #   hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
      #   openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
