--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -4,69 +4,56 @@ on: [push]
 
 env:
   BUILD_TYPE: Release
-  #IVW_VCPKG_SHA: '2a6442cb934de2f99c8ac5bbd8a9dcf5538aee98'
-  #IVW_VCPKG_SHA: '2724db740385a9e719030b99830ec13d7bcd84de'
-  IVW_VCPKG_SHA: '3d4d09b2640c2a3bcc831bd91131464f0ed77508' #ras0219
+  IVW_VCPKG_SHA: '2a6442cb934de2f99c8ac5bbd8a9dcf5538aee98'
   VCPKG_DEFAULT_TRIPLET: 'x64-windows'                   # recognized by vcpkg
   VCPKG_BINARY_SOURCES : 'clear;nuget,GitHub,readwrite'  # recognized by vcpkg
-  # files,${{ github.workspace }}/vcpkg-cache,readwrite
-  
+
+
 jobs:
   build:
-    runs-on: windows-latest
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest]
+    
+    runs-on: ${{ matrix.os }}
 
     steps:  
-    #- name: Cache Vcpkg binaries
-    #  uses: actions/cache@v2
-    #  with:
-    #    path: vcpkg-cache
-    #    key: vcpkg-bin-cache-dynamic-v1
-    #    restore-keys: | 
-    #      vcpkg-bin-cache-dynamic-v1
-    #      vcpkg-bin-cache-dynamic
-    
-    - name: Clean vcpkg
+    - name: Setup
       shell: bash
-      run: rm -rf C:/vcpkg
-    
-    - name: VCPKG Clone
-      uses: actions/checkout@v2.3.2
-      with:
-        repository: 'ras0219/vcpkg'
-        ref: ${{ env.IVW_VCPKG_SHA }}
-        path: '${{ github.workspace }}/vcpkg'
-    
-    - name: dir
-      shell: bash
-      working-directory: '${{ github.workspace }}/vcpkg'
-      run: 'ls -al'
-    
-    - name: VCPKG Bootstrap
-      shell: bash
-      working-directory: '${{ github.workspace }}/vcpkg'
-      run: './bootstrap-vcpkg.sh'
-    
-    - name: 'Setup NuGet Credentials'
-      shell: bash
-      working-directory: '${{ github.workspace }}/vcpkg'
-      run: >
-        `./vcpkg fetch nuget | tail -n 1`
-        sources add
-        -source "https://nuget.pkg.github.com/inviwo/index.json"
-        -storepasswordincleartext
-        -name "GitHub"
-        -username "inviwo"
-        -password "${{ secrets.GITHUB_TOKEN }}"
-    
-    - name: ENV
-      shell: bash
-      run: env
+      run: |
+        env
+        ls $VCPKG_INSTALLATION_ROOT
+        
       
-    - name: VCPKG Install
-      shell: bash
-      working-directory: '${{ github.workspace }}/vcpkg'
-      run: > 
-        ./vcpkg --debug install fmt
+    #- name: VCPKG Clone
+    #  uses: actions/checkout@v2.3.2
+    #  with:
+    #    repository: 'microsoft/vcpkg'
+    #    ref: ${{ env.IVW_VCPKG_SHA }}
+    #    path: '${{ github.workspace }}/vcpkg'
+    
+    #- name: VCPKG Bootstrap
+    #  shell: bash
+    #  working-directory: '${{ github.workspace }}/vcpkg'
+    #  run: './bootstrap-vcpkg.sh'
+    
+    #- name: 'Setup NuGet Credentials'
+    #  shell: bash
+    #  working-directory: '${{ github.workspace }}/vcpkg'
+    #  run: >
+    #    `./vcpkg fetch nuget | tail -n 1`
+    #    sources add
+    #    -source "https://nuget.pkg.github.com/inviwo/index.json"
+    #    -storepasswordincleartext
+    #    -name "GitHub"
+    #    -username "inviwo"
+    #    -password "${{ secrets.GITHUB_TOKEN }}"
+           
+    #- name: VCPKG Install
+    #  shell: bash
+    #  working-directory: '${{ github.workspace }}/vcpkg'
+    #  run: > 
+    #    ./vcpkg --debug install fmt
      #   assimp benchmark cimg eigen3 fmt freetype glew glfw3 glm gtest 
      #   hdf5[cpp,zlib] libjpeg-turbo libpng minizip nlohmann-json 
      #   openexr pybind11 python3 tclap tiff tinydir tinyxml2 utfcpp zlib
