--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -14,7 +14,8 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
-    
+      fail-fast: false
+      
     runs-on: ${{ matrix.os }}
 
     steps:  
@@ -25,11 +26,13 @@ jobs:
         pwd
         env
         ls -al
+        echo "Status"
         git status
+        echo "Pull"
         git pull
+        echo "Bootstrap"
         ./bootstrap-vcpkg.sh
         
-      
     #- name: VCPKG Clone
     #  uses: actions/checkout@v2.3.2
     #  with:
