--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -26,6 +26,8 @@ jobs:
         pwd
         env
         ls -al
+        echo "Reset"
+        git reset --hard
         echo "Status"
         git status
         echo "Pull"
