--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -66,7 +66,7 @@ jobs:
         dir: ${{ github.workspace }}
        
     - name: Install NSIS
-      if: matrix.os == windows-latest
+      if: matrix.os == 'windows-latest'
       run: |
         Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
         scoop bucket add extras
