--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -46,7 +46,12 @@ jobs:
         -name "GitHub"
         -username "inviwo"
         -password "${{ secrets.GITHUB_TOKEN }}"
-           
+
+    - name: Apt Install
+      shell: bash
+      if: matrix.os == 'linux-latest'
+      run: sudo apt install libxinerama-dev libxcursor-dev xorg-dev libglu1-mesa-dev libglew-dev
+
     - name: VCPKG Install
       shell: bash
       run: > 
@@ -59,11 +64,6 @@ jobs:
       shell: bash
       if: matrix.os != 'linux-latest'
       run: vcpkg --debug --triplet ${{ matrix.triplet }} install glew
-    
-    - name: Glew Install
-      shell: bash
-      if: matrix.os == 'linux-latest'
-      run: apt-get install glew
     
     - name: Install Numpy
       shell: bash
@@ -92,7 +92,7 @@ jobs:
       run: >
         cmake.exe -S inviwo -B build 
         -DVCPKG_TARGET_TRIPLET='${{ env.VCPKG_DEFAULT_TRIPLET }}'
-        -DCMAKE_TOOLCHAIN_FILE='${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake'
+        -DCMAKE_TOOLCHAIN_FILE=$VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake
         -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
         -DIVW_CFG_CMAKE_DEBUG=ON
         -DIVW_CFG_PRECOMPILED_HEADERS=OFF
