--- a/.github/workflows/inviwo.yml
+++ b/.github/workflows/inviwo.yml
@@ -17,12 +17,15 @@ jobs:
           - os: 'windows-latest'
             triplet: 'x64-windows'
             mono: ''
+            cmake: '-DIVW_MODULE_HDF5=ON'
           - os: 'macos-latest'
             triplet: 'x64-osx'
-            mono: 'mono' 
+            mono: 'mono'
+            cmake: '-DIVW_MODULE_HDF5=OFF' 
           - os: 'ubuntu-latest'
             triplet: 'x64-linux'
-            mono: 'mono' 
+            mono: 'mono'
+            cmake: '-DIVW_USE_SIGAR=OFF -DIVW_MODULE_HDF5=OFF' 
       fail-fast: false
       
     runs-on: ${{ matrix.os }}
@@ -104,7 +107,6 @@ jobs:
         -DIVW_USE_OPENMP=OFF
         -DIVW_USE_OPENEXR=OFF
         -DIVW_MODULE_CIMG=ON
-        -DIVW_MODULE_HDF5=ON
         -DIVW_PACKAGE_INSTALLER=ON
         -DIVW_USE_EXTERNAL_ASSIMP=ON
         -DIVW_USE_EXTERNAL_BENCHMARK=ON
@@ -124,6 +126,7 @@ jobs:
         -DIVW_USE_EXTERNAL_TINYDIR=ON
         -DIVW_USE_EXTERNAL_PYBIND11=ON
         -DIVW_USE_EXTERNAL_OPENEXR=ON
+        '${{ matrix.cmake }}'
          
     - name: Build
       working-directory: build
