OpenGL/Various: Added asserts for using the wrong context in the FBO, More use of string_view in many places, various warning fixes. Volumeraycater fixes for halding errors in the pool job. Removed templated canvasqt since we only use one backend.

--- a/modules/openglqt/CMakeLists.txt
+++ b/modules/openglqt/CMakeLists.txt
@@ -30,6 +30,7 @@ ivw_group("Header Files" ${HEADER_FILES})
 # Add source files
 set(SOURCE_FILES
     src/canvasprocessorwidgetqt.cpp
+    src/canvasqt.cpp
     src/canvasqopenglwidget.cpp
     src/hiddencanvasqt.cpp
     src/openglqtcapabilities.cpp
